<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="sign_in">Login</string>
    <string name="register">register</string>
    <string name="mainTitle">Shoe Store</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="next">Next</string>
    <string name="registerLabel">Don\'t have an account? Register here</string>
    <string name="slogan">Here you can find the best shoes at the best price</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions">❂ Select "Start Shopping" to check out all our shoes\n\n❂ You can scroll through the list to see the shoes\n\n❂ Select a specific shoe to see it\'s details\n\n❂ Have fun!</string>
    <string name="logout">Logout</string>
    <string name="addShoe">Add Shoe</string>
    <string name="shoe_one_title">Low Converse</string>
    <string name="shoe_two_title">Nike Air Max</string>
    <string name="shoe_three_title">High Converse</string>
    <string name="shoe_four_title">Stiletto</string>
    <string name="shoe_five_title">Running Sneaker</string>
    <string name="shoe_six_title">High Boot</string>
    <string name="company_converse">Converse All Star</string>
    <string name="company_nike">Nike</string>
    <string name="company_valentino">Valentino</string>
    <string name="shoe_one_des">Low converse all star with lace</string>
    <string name="shoe_two_des">Nike Air Max with lace</string>
    <string name="shoe_three_des">High converse all star with lace</string>
    <string name="shoe_four_des">Pink open stiletto</string>
    <string name="shoe_five_des">Sportive running Sneaker with lace</string>
    <string name="shoe_six_des">High heel boot with lace</string>
    <string name="name">Name:</string>
    <string name="size">Size:</string>
    <string name="company">Company:</string>
    <string name="description">Description:</string>
    <string name="prompt_name">Shoe Name</string>
    <string name="prompt_company">Shoe Company</string>
    <string name="prompt_size">Shoe Size</string>
    <string name="prompt_description">Shoe Description</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

</resources>
