<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pastelPurple">

        <TextView
            android:id="@+id/instruction_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_margin_top"
            android:fontFamily="@font/asap_medium"
            android:text="@string/instructions_title"
            android:textColor="@color/offWhite"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square"
            android:layout_marginStart="@dimen/fragment_vertical_double_margin"
            android:layout_marginEnd="@dimen/fragment_vertical_double_margin"
            android:paddingVertical="@dimen/fragment_vertical_margin"
            android:paddingHorizontal="@dimen/fragment_vertical_margin"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/asap"
            android:maxLines="15"
            android:text="@string/instructions"
            android:textColor="@color/offWhite"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/instruction_title" />

        <Button
            android:id="@+id/shopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/start_shopping"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructions" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>