<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <!-- Constraint layout is used due to the complexity of the disposition of elements,
    complexity of the hierarchy and alignment of elements   -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/vertical_guideline_details" />

        <ImageView
            android:id="@+id/shoeImage"
            android:layout_width="87dp"
            android:layout_height="72dp"
            android:layout_centerInParent="true"
            android:background="@drawable/border_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="@dimen/fragment_vertical_margin"
            android:fontFamily="@font/asap"
            android:shadowColor="@color/darkPurple"
            android:text="@={shoe.name}"
            android:textColor="@color/offWhite"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeImage" />

        <TextView
            android:id="@+id/companyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asap"
            android:gravity="center"
            android:paddingRight="5dp"
            android:text="@string/company"
            android:textColor="@color/darkPurple"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoeCompany"
            app:layout_constraintBottom_toTopOf="@+id/descriptionLabel"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline_details"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoeCompany"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_vertical_double_margin"
            android:fontFamily="@font/asap"
            android:text="@={shoe.company}"
            android:textColor="@color/offWhite"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/shoeDescription"
            app:layout_constraintStart_toEndOf="@+id/companyLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asap"
            android:gravity="center"
            android:paddingRight="5dp"
            android:text="@string/description"
            android:textColor="@color/darkPurple"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoeDescription"
            app:layout_constraintBottom_toTopOf="@+id/shoeSizeLabel"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline_details"
            app:layout_constraintTop_toBottomOf="@+id/companyLabel" />

        <TextView
            android:id="@+id/shoeDescription"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asap"
            android:text="@={shoe.description}"
            android:textColor="@color/offWhite"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/shoeSize"
            app:layout_constraintStart_toEndOf="@+id/descriptionLabel"
            app:layout_constraintTop_toBottomOf="@+id/shoeCompany" />

        <TextView
            android:id="@+id/shoeSizeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asap"
            android:paddingRight="5dp"
            android:text="@string/size"
            android:textColor="@color/darkPurple"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoeSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline_details"
            app:layout_constraintTop_toBottomOf="@+id/descriptionLabel" />

        <TextView
            android:id="@+id/shoeSize"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fragment_vertical_double_margin"
            android:fontFamily="@font/asap"
            android:textColor="@color/offWhite"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoeSizeLabel"
            app:layout_constraintTop_toBottomOf="@+id/shoeDescription" />

        <include
            layout="@layout/divider_view"
            app:layout_constraintTop_toBottomOf="@+id/image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>